UPDATE Activities, misc/History, dark.css Add an activity held on last Halloween, also re-arrange further contents Fix arrangement in History/events (now confidential) Fix a displaying error in Dark Mode

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -32,6 +32,7 @@ body {
 }
 .markdown-section hr {
   border-bottom: 1px solid #888;
+  margin: 2em 0;
 }
 .markdown-section iframe {
   border: 1px solid #888;
@@ -410,10 +411,6 @@ body.sticky .sidebar-toggle {
 }
 .markdown-section > :first-child {
   margin-top: 0 !important;
-}
-.markdown-section hr {
-  border: none;
-  margin: 2em 0;
 }
 .markdown-section iframe {
 /* fix horizontal overflow on iOS Safari */
